tooling/nargo_cli/tests/snapshots/execution_success/signed_comparison/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "1998584279744703196": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _75",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:8 bits []",
    "BLACKBOX::RANGE [_1]:8 bits []",
    "BLACKBOX::RANGE [_2]:8 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 128 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [_3]:1 bits []",
    "BLACKBOX::RANGE [_4]:7 bits []",
    "EXPR [ (1, _0) (-128, _3) (-1, _4) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 128 ]], outputs: [_5, _6]",
    "BLACKBOX::RANGE [_5]:1 bits []",
    "BLACKBOX::RANGE [_6]:7 bits []",
    "EXPR [ (1, _1) (-128, _5) (-1, _6) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (-1, _1) 512 ], EXPR [ 512 ]], outputs: [_7, _8]",
    "BLACKBOX::RANGE [_7]:1 bits []",
    "BLACKBOX::RANGE [_8]:9 bits []",
    "EXPR [ (1, _0) (-1, _1) (-512, _7) (-1, _8) 512 ]",
    "EXPR [ (-1, _7) (-1, _9) 1 ]",
    "EXPR [ (-2, _3, _5) (1, _3) (1, _5) (-1, _10) 0 ]",
    "EXPR [ (-2, _9, _10) (1, _9) (1, _10) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 512 ], EXPR [ 256 ]], outputs: [_11, _12]",
    "BLACKBOX::RANGE [_11]:2 bits []",
    "BLACKBOX::RANGE [_12]:8 bits []",
    "EXPR [ (-1, _0) (-256, _11) (-1, _12) 512 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 128 ], EXPR [ 256 ]], outputs: [_13, _14]",
    "BLACKBOX::RANGE [_13]:1 bits []",
    "BLACKBOX::RANGE [_14]:8 bits []",
    "EXPR [ (1, _0) (-256, _13) (-1, _14) 128 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _12) 128 ], EXPR [ 256 ]], outputs: [_15, _16]",
    "BLACKBOX::RANGE [_15]:1 bits []",
    "BLACKBOX::RANGE [_16]:8 bits []",
    "EXPR [ (1, _12) (-256, _15) (-1, _16) 128 ]",
    "EXPR [ (-1, _13, _15) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _12) 0 ], EXPR [ 128 ]], outputs: [_17, _18]",
    "BLACKBOX::RANGE [_17]:1 bits []",
    "BLACKBOX::RANGE [_18]:7 bits []",
    "EXPR [ (1, _12) (-128, _17) (-1, _18) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 128 ]], outputs: [_19, _20]",
    "BLACKBOX::RANGE [_19]:1 bits []",
    "BLACKBOX::RANGE [_20]:7 bits []",
    "EXPR [ (1, _1) (-128, _19) (-1, _20) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _1) (1, _12) 512 ], EXPR [ 512 ]], outputs: [_21, _22]",
    "BLACKBOX::RANGE [_21]:1 bits []",
    "BLACKBOX::RANGE [_22]:9 bits []",
    "EXPR [ (-1, _1) (1, _12) (-512, _21) (-1, _22) 512 ]",
    "EXPR [ (-1, _21) (-1, _23) 1 ]",
    "EXPR [ (-2, _17, _19) (1, _17) (1, _19) (-1, _24) 0 ]",
    "EXPR [ (-2, _23, _24) (1, _23) (1, _24) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _1) 512 ], EXPR [ 256 ]], outputs: [_25, _26]",
    "BLACKBOX::RANGE [_25]:2 bits []",
    "BLACKBOX::RANGE [_26]:8 bits []",
    "EXPR [ (-1, _1) (-256, _25) (-1, _26) 512 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 128 ], EXPR [ 256 ]], outputs: [_27, _28]",
    "BLACKBOX::RANGE [_27]:1 bits []",
    "BLACKBOX::RANGE [_28]:8 bits []",
    "EXPR [ (1, _1) (-256, _27) (-1, _28) 128 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _26) 128 ], EXPR [ 256 ]], outputs: [_29, _30]",
    "BLACKBOX::RANGE [_29]:1 bits []",
    "BLACKBOX::RANGE [_30]:8 bits []",
    "EXPR [ (1, _26) (-256, _29) (-1, _30) 128 ]",
    "EXPR [ (-1, _27, _29) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _26) 0 ], EXPR [ 128 ]], outputs: [_31, _32]",
    "BLACKBOX::RANGE [_31]:1 bits []",
    "BLACKBOX::RANGE [_32]:7 bits []",
    "EXPR [ (1, _26) (-128, _31) (-1, _32) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _12) 0 ], EXPR [ 128 ]], outputs: [_33, _34]",
    "BLACKBOX::RANGE [_33]:1 bits []",
    "BLACKBOX::RANGE [_34]:7 bits []",
    "EXPR [ (1, _12) (-128, _33) (-1, _34) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _12) (1, _26) 512 ], EXPR [ 512 ]], outputs: [_35, _36]",
    "BLACKBOX::RANGE [_35]:1 bits []",
    "BLACKBOX::RANGE [_36]:9 bits []",
    "EXPR [ (-1, _12) (1, _26) (-512, _35) (-1, _36) 512 ]",
    "EXPR [ (-1, _35) (-1, _37) 1 ]",
    "EXPR [ (-2, _31, _33) (1, _31) (1, _33) (-1, _38) 0 ]",
    "EXPR [ (-2, _37, _38) (1, _37) (1, _38) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 128 ]], outputs: [_39, _40]",
    "BLACKBOX::RANGE [_39]:1 bits []",
    "BLACKBOX::RANGE [_40]:7 bits []",
    "EXPR [ (1, _0) (-128, _39) (-1, _40) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 0 ], EXPR [ 128 ]], outputs: [_41, _42]",
    "BLACKBOX::RANGE [_41]:1 bits []",
    "BLACKBOX::RANGE [_42]:7 bits []",
    "EXPR [ (1, _2) (-128, _41) (-1, _42) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (-1, _2) 512 ], EXPR [ 512 ]], outputs: [_43, _44]",
    "BLACKBOX::RANGE [_43]:1 bits []",
    "BLACKBOX::RANGE [_44]:9 bits []",
    "EXPR [ (1, _0) (-1, _2) (-512, _43) (-1, _44) 512 ]",
    "EXPR [ (-1, _43) (-1, _45) 1 ]",
    "EXPR [ (-2, _39, _41) (1, _39) (1, _41) (-1, _46) 0 ]",
    "EXPR [ (-2, _45, _46) (1, _45) (1, _46) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 128 ]], outputs: [_47, _48]",
    "BLACKBOX::RANGE [_47]:1 bits []",
    "BLACKBOX::RANGE [_48]:7 bits []",
    "EXPR [ (1, _0) (-128, _47) (-1, _48) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 517 ], EXPR [ 512 ]], outputs: [_49, _50]",
    "BLACKBOX::RANGE [_49]:1 bits []",
    "BLACKBOX::RANGE [_50]:9 bits []",
    "EXPR [ (-1, _0) (-512, _49) (-1, _50) 517 ]",
    "EXPR [ (2, _47, _49) (-1, _47) (-1, _49) 1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (-1, _1) 512 ], EXPR [ 256 ]], outputs: [_51, _52]",
    "BLACKBOX::RANGE [_51]:2 bits []",
    "BLACKBOX::RANGE [_52]:8 bits []",
    "EXPR [ (1, _0) (-1, _1) (-256, _51) (-1, _52) 512 ]",
    "EXPR [ (-1, _13) (-1, _27) (-1, _53) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _53) 0 ]], outputs: [_54]",
    "EXPR [ (1, _53, _54) (1, _55) -1 ]",
    "EXPR [ (1, _53, _55) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _52) 128 ], EXPR [ 256 ]], outputs: [_56, _57]",
    "BLACKBOX::RANGE [_56]:1 bits []",
    "BLACKBOX::RANGE [_57]:8 bits []",
    "EXPR [ (1, _52) (-256, _56) (-1, _57) 128 ]",
    "EXPR [ (1, _13) (-1, _56) (-1, _58) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _58) 0 ]], outputs: [_59]",
    "EXPR [ (1, _58, _59) (1, _60) -1 ]",
    "EXPR [ (1, _58, _60) 0 ]",
    "EXPR [ (1, _55, _60) (-1, _55) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _52) 504 ], EXPR [ 256 ]], outputs: [_61, _62]",
    "BLACKBOX::RANGE [_61]:2 bits []",
    "BLACKBOX::RANGE [_62]:8 bits []",
    "EXPR [ (1, _52) (-256, _61) (-1, _62) 504 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _62) 128 ], EXPR [ 256 ]], outputs: [_63, _64]",
    "BLACKBOX::RANGE [_63]:1 bits []",
    "BLACKBOX::RANGE [_64]:8 bits []",
    "EXPR [ (1, _62) (-256, _63) (-1, _64) 128 ]",
    "EXPR [ (1, _56) (-1, _63) (-1, _65) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _65) 0 ]], outputs: [_66]",
    "EXPR [ (1, _65, _66) (1, _67) -1 ]",
    "EXPR [ (1, _65, _67) 0 ]",
    "EXPR [ (1, _56, _67) (-1, _56) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 0 ], EXPR [ 128 ]], outputs: [_68, _69]",
    "BLACKBOX::RANGE [_68]:1 bits []",
    "BLACKBOX::RANGE [_69]:7 bits []",
    "EXPR [ (1, _2) (-128, _68) (-1, _69) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _62) 0 ], EXPR [ 128 ]], outputs: [_70, _71]",
    "BLACKBOX::RANGE [_70]:1 bits []",
    "BLACKBOX::RANGE [_71]:7 bits []",
    "EXPR [ (1, _62) (-128, _70) (-1, _71) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) (-1, _62) 512 ], EXPR [ 512 ]], outputs: [_72, _73]",
    "BLACKBOX::RANGE [_72]:1 bits []",
    "BLACKBOX::RANGE [_73]:9 bits []",
    "EXPR [ (1, _2) (-1, _62) (-512, _72) (-1, _73) 512 ]",
    "EXPR [ (-1, _72) (-1, _74) 1 ]",
    "EXPR [ (-2, _68, _70) (1, _68) (1, _70) (-1, _75) 0 ]",
    "EXPR [ (-2, _74, _75) (1, _74) (1, _75) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
